# cpp_bad_habits

./: .gitignore  CMakeLists.txt  README.md  note.md
.cache/clangd/index/: demo01.cpp.D5F64149629F4042.idx
src/: demo01.cpp  demo02.cpp  demo03.cpp  demo04.cpp  demo05.cpp  demo06.cpp  demo07_08.cpp  demo09_10.cpp  demo11.cpp  demo12.cpp  demo13.cpp  demo14.cpp  demo15.cpp  demo16.cpp  demo17.cpp  demo18.cpp  demo19_20.cpp  demo21.cpp  demo22.cpp  demo23_24_25_26.cpp  demo27.cpp  demo28.cpp
